# fl-studio_agent

./: .gitignore  CHANGELOG.md  LICENSE  NEXT_STEPS.md  README.md  TODO.md  fl_agent_config.example.json  pyproject.toml  requirements-ui.txt  requirements.txt
clients/: ollama_mcp_agent.py  openai_mcp_agent.py
docs/: OPENCLAW_GPT5_CONNECTOR.md
fl_bridge/: device_fl_studio_agent.py
scripts/: install_fl_bridge.ps1  run_desktop_app.ps1  run_ollama_agent.ps1  run_openai_agent.ps1
src/fl_agent_desktop/: main.py  ollama.py  parse.py  pattern_preview.py  stepseq_readback.py  ui_state.py
src/fl_studio_agent_mcp/: file_transport.py  midi_transport.py  ollama_agent.py  patterns.py  protocol.py  rpc_utils.py  server.py
src/fl_studio_agent_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_bassline_and_parse.py  test_bridge_stepseq_readback.py  test_desktop_ui_state.py  test_ollama_mcp_agent.py  test_openai_mcp_agent.py  test_pattern_preview.py  test_server_pattern_index.py  test_server_stepseq_tool.py  test_server_timeout_handling.py  test_stepseq_readback.py
