[project]
name = "fl-studio-agent-mcp"
version = "0.1.0"
description = "MCP server + FL Studio MIDI scripting bridge (Windows / FL Studio 2025.x)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.0.0",
  "mido>=1.3.2",
  "python-rtmidi>=1.5.8",
]

[project.scripts]
fl-studio-agent-mcp = "fl_studio_agent_mcp.server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

